--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -11,6 +11,6 @@
     <title>Vianda Consultorias</title>
   </head>
   <body>
-    <img src="/assets/img/provisorio.png" alt="EM CONSTRUÇÃO"/>
+    <img src="assets/img/provisorio.png" alt="EM CONSTRUÇÃO"/>
   </body>
 </html>
