--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -9,6 +9,14 @@
       content="SITE CRIADO PRO AMÔ"
     />
     <title>Vianda Consultorias</title>
+    <style>
+      img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 70%;
+      }
+    </style> 
   </head>
   <body>
     <img src="assets/img/provisorio.png" alt="EM CONSTRUÇÃO"/>
