--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -10,15 +10,24 @@
     />
     <title>Vianda Consultorias</title>
     <style>
+      div {
+        height: 800px;
+        position: relative;
+      }
       img {
-        display: block;
         margin-left: auto;
         margin-right: auto;
-        width: 70%;
+        width: 80%;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
       }
     </style> 
   </head>
   <body>
-    <img src="assets/img/provisorio.png" alt="EM CONSTRUÇÃO"/>
+    <div>
+      <img src="assets/img/provisorio.png" alt="EM CONSTRUÇÃO"/>
+    </div> 
   </body>
 </html>
